Avoid using deprecated new Integer in org.eclipse.osgi.tests
Change-Id: I0a59f3b1700480852360c62b8cea8b510b30ea03
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>